# accelerator

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  builder.go  cache.go  contract_test.go  doc.go  errors.go  go.mod  go.sum  options.go
benches/: cache_path_bench.rs
docs/: cache-ops-runbook.md  code-flattening-guideline.md  local-stack-integration.md  multi-level-cache-capability-model.md  performance-engineering-playbook.md  terminology.md
docs/benchmarks/: cache_path_bench.json
docs/zh/: cache-ops-runbook.zh-CN.md  code-flattening-guideline.zh-CN.md  local-stack-integration.zh-CN.md  multi-level-cache-capability-model.zh-CN.md  performance-engineering-playbook.zh-CN.md  terminology.zh-CN.md
examples/: clickstack_otlp.rs  fixed_backend_best_practice.rs  macro_batch_best_practice.rs  macro_best_practice.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: bench.sh  docker-compose.yml  otel-collector.yml  prometheus.yml  tempo.yml
scripts/grafana/provisioning/datasources/: datasources.yml
src/: backend.rs  builder.rs  cache.rs  config.rs  error.rs  lib.rs  loader.rs  local.rs  observability.rs  remote.rs  telemetry.rs
tests/: macro_v1.rs  macro_v2.rs  redis_integration.rs  stack_integration.rs
tests/macro_v1/: cache_evict.rs  cache_put.rs  cacheable.rs  support.rs
tests/macro_v2/: cache_evict_batch.rs  cacheable_batch.rs  support.rs
