[package]
name = "accelerator-macros"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Procedural macros for the accelerator cache runtime"
repository = "https://github.com/landians/accelerator"
documentation = "https://docs.rs/accelerator-macros"
keywords = ["cache", "proc-macro", "async"]
categories = ["caching", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "parsing"] }
proc-macro-crate = "3.5.0"
